
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-08-30 Jean-François Viaud <jviaud@univ-lr.fr>
	+ examples/cxt/subdirectdecomp.cxt
	+ src/fr/kbertet/lattice/ConceptLattice.iuml
	+ src/fr/kbertet/lattice/ConceptLattice.java
		^ added getConcept method
	+ src/fr/kbertet/lattice/Context.iuml
	+ src/fr/kbertet/lattice/Context.java
		^ added arrowClosedA method
		^ added arrowClosedO method
		^ added subDirectDecomposition method
	+ test/fr/kbertet/lattice/ConceptLatticeTest.java
	+ test/fr/kbertet/lattice/ContextTest.java

2014-08-26 Jean-François Viaud <jviaud@univ-lr.fr>
	* src/fr/kbertet/lattice/ArrowRelation.java
	* src/fr/kbertet/lattice/ArrowRelation.iuml
	* test/fr/kbertet/lattice/ArrowRelationTest.java
	* src/fr/kbertet/lattice/Context.java
	* src/fr/kbertet/lattice/Context.iuml
	* test/fr/kbertet/lattice/ContextTest.java

2014-08-25 Jean-François Viaud <jviaud@univ-lr.fr>
	+ src/fr/kbertet/lattice/io/ContextReaderFIMI.java
	+ src/fr/kbertet/lattice/io/ContextReaderFIMI.iuml
	+ src/fr/kbertet/lattice/io/ContextWriterFIMI.java
	+ src/fr/kbertet/lattice/io/ContextWriterFIMI.iuml
	* src/fr/kbertet/lattice/Context.java
	* test/fr/kbertet/lattice/ContextText.java

2014-08-21 Jean-François Viaud <jviaud@univ-lr.fr>
	+ src/fr/kbertet/lattice/io/ContextReaderBurmeister.java
	+ src/fr/kbertet/lattice/io/ContextReaderBurmeister.iuml
	+ src/fr/kbertet/lattice/io/ContextWriterBurmeister.java
	+ src/fr/kbertet/lattice/io/ContextWriterBurmeister.iuml
	* src/fr/kbertet/lattice/Context.java
	* test/fr/kbertet/lattice/ContextText.java
	+ examples/cxt

2014-07-08 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/lattice/BijectiveComponents.java