@@ -25,6 +25,13 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+2014-09-01 Jean-François Viaud <jviaud@univ-lr.fr>
+	+ src/fr/kbertet/lattice/Lattice.iuml
+	+ src/fr/kbertet/lattice/Lattice.java
+		^added joinClosure, meetClosure, fullClosure and
+		hybridGenerators methods
+	+ test/fr/kbertet/lattice/LatticeTest.java
+
 2014-08-30 Jean-François Viaud <jviaud@univ-lr.fr>
 	+ examples/cxt/subdirectdecomp.cxt
 	+ src/fr/kbertet/lattice/ConceptLattice.iuml
